--- a/src/app/notes/notes.component.css
+++ b/src/app/notes/notes.component.css
@@ -1,13 +1,29 @@
+.notes {
+  padding: 20px;
+}
+
 .underlined-heading {
-  position: relative; /* Positionierung relativ zum Elternelement */
+  position: relative;
+  padding-bottom: 10px;
+  margin-bottom: 10px;
 }
 
 .underlined-heading::after {
-  content: ""; /* Fügt kein zusätzliches Inhaltselement ein */
-  position: absolute; /* Positionierung relativ zum Elternelement */
-  bottom: -5px; /* Position unterhalb des Texts */
-  left: 0; /* Beginnt am linken Rand */
-  width: 100%; /* Nimmt die gesamte Breite des Elternelements ein */
-  height: 2px; /* Höhe des Unterstrichs */
-  background-color: black; /* Farbe des Unterstrichs */
+  content: "";
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 2px;
+  background-color: black;
+}
+
+.note-list {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+  gap: 20px;
+}
+
+.note-card {
+  width: 100%;
 }
