--- a/src/app/courses/courses.component.html
+++ b/src/app/courses/courses.component.html
@@ -1,6 +1,9 @@
 <div class="courses">
   <h2 class="underlined-heading">Kurse</h2>
   <div class="course-list">
-    <!-- Course blocks will be listed here -->
+    <div></div>
+    <div></div>
+    <div></div>
+    <div></div>
   </div>
 </div>
