--- a/src/app/tasks/tasks.component.html
+++ b/src/app/tasks/tasks.component.html
@@ -1,14 +1,15 @@
 <div class="tasks">
   <h2 class="underlined-heading">Aufgaben</h2>
+
   <ul>
-    <li>Mathematik Hausaufgaben</li>
-    <li>Geschichtsprojekt überprüfen</li>
-    <li>Physik-Experiment vorbereiten</li>
+    <li *ngFor="let todo of toDos">
+      {{ todo.description }}
+    </li>
   </ul>
 
 
 
-  <mat-accordion>
+<!--  <mat-accordion>
     <mat-expansion-panel (opened)="panelOpenState = true"
                          (closed)="panelOpenState = false">
       <mat-expansion-panel-header>
@@ -23,6 +24,6 @@
       - Das
       -dAS</p>
     </mat-expansion-panel>
-  </mat-accordion>
+  </mat-accordion> -->
 </div>
 
