Abfrage von ToDos aus dem Backend, endDate -> deadLine, title gelöscht

--- a/src/app/task-dialog/task-dialog.component.html
+++ b/src/app/task-dialog/task-dialog.component.html
@@ -13,7 +13,7 @@
 
     <mat-form-field appearance="fill">
       <mat-label>Enddatum</mat-label>
-      <input matInput [matDatepicker]="picker" formControlName="endDate">
+      <input matInput [matDatepicker]="picker" formControlName="deadLine">
       <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
       <mat-datepicker #picker></mat-datepicker>
     </mat-form-field>
