--- a/src/app/tasks/tasks.component.html
+++ b/src/app/tasks/tasks.component.html
@@ -15,7 +15,7 @@
         </mat-panel-description>
       </mat-expansion-panel-header>
       <div>
-        <p>{{ task.description }}</p>
+       <!-- hier Subtasks -->
         <mat-form-field appearance="fill">
           <mat-label>Priorität</mat-label>
           <mat-select [(value)]="task.priority">
