--- a/src/app/courses/courses.component.css
+++ b/src/app/courses/courses.component.css
@@ -19,12 +19,18 @@
 }
 
 .course-list {
-  display: flex;
-  gap: 10px;
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
+  gap: 20px;
+  max-height: 650px;
+  padding-bottom: 20px;
+  overflow-y: auto;
 }
 
-.course-list div {
-  flex: 1;
-  height: 100px;
-  background-color: #e0e0e0;
+.course-card {
+  width: 100%;
+  height: 150px; /* Quadrat-Layout */
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
