--- a/src/app/notes/notes.component.css
+++ b/src/app/notes/notes.component.css
@@ -22,8 +22,12 @@
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
   gap: 20px;
+  max-height: 400px;
+  padding-bottom: 20px;
+  overflow-y: auto;
 }
 
 .note-card {
   width: 100%;
+  padding: 10px;
 }
