added edit/delete button tasks

--- a/src/app/tasks/tasks.component.css
+++ b/src/app/tasks/tasks.component.css
@@ -21,3 +21,9 @@
 .mat-accordion .mat-expansion-panel-header {
   font-weight: bold;
 }
+
+.task-actions {
+  display: flex;
+  justify-content: flex-end;
+  margin-top: 10px;
+}
