Tasks -> ToDos, Bearbeiten von ToDos mit ausgefülltem Dialog, Komprimieren der Funktionen

--- a/src/app/tasks/tasks.component.html
+++ b/src/app/tasks/tasks.component.html
@@ -5,30 +5,30 @@
     </button>
   </h2>
   <mat-accordion>
-    <mat-expansion-panel *ngFor="let task of tasks">
+    <mat-expansion-panel *ngFor="let todo of toDos">
       <mat-expansion-panel-header>
         <mat-panel-title>
-          {{ task.description }}
+          {{ todo.description }}
         </mat-panel-title>
         <mat-panel-description>
-          Enddatum: {{ task.deadLine | date:'dd.MM.yyyy' }}
+          Enddatum: {{ todo.deadLine | date:'dd.MM.yyyy' }}
         </mat-panel-description>
       </mat-expansion-panel-header>
       <div>
         <!-- hier Subtasks -->
         <mat-form-field appearance="fill">
           <mat-label>Priorität</mat-label>
-          <mat-select [(value)]="task.priority">
+          <mat-select [(value)]="todo.priority">
             <mat-option *ngFor="let priority of priorities" [value]="priority">
               {{ priority }}
             </mat-option>
           </mat-select>
         </mat-form-field>
         <div class="task-actions">
-          <button mat-icon-button (click)="editTask(task)">
+          <button mat-icon-button (click)="editTask(todo)">
             <mat-icon>edit</mat-icon>
           </button>
-          <button mat-icon-button (click)="deleteTask(task)">
+          <button mat-icon-button (click)="deleteTask(todo.id)">
             <mat-icon>delete</mat-icon>
           </button>
         </div>
