--- a/src/app/task-dialog/task-dialog.component.html
+++ b/src/app/task-dialog/task-dialog.component.html
@@ -1,4 +1,4 @@
-<h2 mat-dialog-title>Neue Aufgabe hinzufügen</h2>
+<h2 mat-dialog-title>{{ data.isEdit ? 'Aufgabe bearbeiten' : 'Neue Aufgabe hinzufügen' }}</h2>
 <mat-dialog-content>
   <form [formGroup]="taskForm">
     <mat-form-field appearance="fill">
