Hinzufügen von Backend-Connection für Notes

--- a/src/app/notes/notes.component.html
+++ b/src/app/notes/notes.component.html
@@ -1,6 +1,6 @@
 <div class="notes">
   <h2 class="underlined-heading">Notizen
-    <button mat-icon-button (click)="openDialog()">
+    <button mat-icon-button (click)="openNoteDialog()">
       <mat-icon>add</mat-icon>
     </button>
   </h2>
