--- a/src/app/tasks/tasks.component.css
+++ b/src/app/tasks/tasks.component.css
@@ -27,3 +27,13 @@
   justify-content: flex-end;
   margin-top: 10px;
 }
+
+.completed-task {
+  background-color: grey;
+}
+
+.trenner {
+  width: 100%;
+  border-top: 1px solid #000;
+  margin: 20px 0;
+}
