--- a/src/app/notes/notes.component.html
+++ b/src/app/notes/notes.component.html
@@ -17,7 +17,7 @@
         <button mat-icon-button (click)="editNote(note)">
           <mat-icon>edit</mat-icon>
         </button>
-        <button mat-icon-button (click)="deleteNote(note)">
+        <button mat-icon-button (click)="confirmDeleteNote(note)">
           <mat-icon>delete</mat-icon>
         </button>
       </mat-card-actions>
