--- a/src/app/courses/courses.component.html
+++ b/src/app/courses/courses.component.html
@@ -13,7 +13,7 @@
         <button mat-icon-button (click)="editCourse(course)">
           <mat-icon>edit</mat-icon>
         </button>
-        <button mat-icon-button (click)="deleteCourse(course)">
+        <button mat-icon-button (click)="confirmDeleteCourse(course)">
           <mat-icon>delete</mat-icon>
         </button>
       </mat-card-actions>
