--- a/src/app/notes/notes.component.css
+++ b/src/app/notes/notes.component.css
@@ -19,8 +19,8 @@
 }
 
 .note-list {
-  display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+  display: flex;
+  flex-direction: column;
   gap: 20px;
   max-height: 400px;
   padding-bottom: 20px;
