--- a/src/app/tasks/tasks.component.html
+++ b/src/app/tasks/tasks.component.html
@@ -31,7 +31,7 @@
           <button mat-icon-button (click)="editTask(todo)">
             <mat-icon>edit</mat-icon>
           </button>
-          <button mat-icon-button (click)="deleteTask(todo.id)">
+          <button mat-icon-button (click)="confirmDeleteTask(todo.id)">
             <mat-icon>delete</mat-icon>
           </button>
         </div>
