--- a/src/app/task-dialog/task-dialog.component.html
+++ b/src/app/task-dialog/task-dialog.component.html
@@ -13,6 +13,22 @@
       <mat-datepicker #picker></mat-datepicker>
     </mat-form-field>
 
+    <h3>Subtasks</h3>
+    <div formArrayName="subtasks">
+      <div *ngFor="let subtask of subtasks.controls; let i = index" [formGroupName]="i">
+        <mat-form-field appearance="fill">
+          <mat-label>Subtask</mat-label>
+          <input matInput formControlName="description">
+        </mat-form-field>
+        <button mat-icon-button (click)="removeSubtask(i)">
+          <mat-icon>remove</mat-icon>
+        </button>
+      </div>
+      <button mat-fab color="primary" (click)="addSubtask()">
+        <mat-icon>add</mat-icon>
+      </button>
+    </div>
+
     <mat-form-field appearance="fill">
       <mat-label>Priorität</mat-label>
       <mat-select formControlName="priority">
