ID -> UUID(number -> string) + Versuch die Subtasks durchzustreichen

--- a/src/app/subtask/subtask.component.html
+++ b/src/app/subtask/subtask.component.html
@@ -1,1 +1,3 @@
+<div [ngClass]="{'completed': subtask.completed}">
 <mat-checkbox [checked]="subtask.completed" (click)="onCheckboxClick(subtask)" [ngClass]="{'completed': subtask.completed}">{{ subtask.description }}</mat-checkbox>
+</div>
