--- a/src/app/dashboard/dashboard.component.css
+++ b/src/app/dashboard/dashboard.component.css
@@ -1,3 +1,10 @@
+body {
+  font-family: Arial, sans-serif;
+  background-color: #f0f0f0;
+  margin: 0;
+  padding: 0;
+}
+
 .dashboard {
   display: grid;
   grid-template-rows: auto 1fr auto;
@@ -17,20 +24,23 @@
   position: relative;
 }
 
-.small-button {
-  padding: 5px 10px;
-  font-size: 12px;
-  line-height: 1;
-  min-width: auto;
-  background-color: white;
-}
-
 .dashboard-header h1 {
   position: absolute;
   bottom: 10px;
   left: 20px;
   color: white;
   font-size: 24px;
+}
+
+.small-button {
+  padding: 5px 10px;
+  font-size: 12px;
+  line-height: 1;
+  min-width: auto;
+  background-color: white;
+  position: absolute;
+  top: 10px;
+  right: 20px;
 }
 
 .dashboard-content {
@@ -56,6 +66,9 @@
   background-color: white;
   border-radius: 8px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  width: 100%; /* Setze die Breite der Box auf 100% */
+  max-width: 300px; /* Maximalbreite der Wetterbox */
+  margin: 0 auto; /* Zentriere die Box */
 }
 
 .underlined-heading {
@@ -72,4 +85,73 @@
   width: 100%;
   height: 2px;
   background-color: black;
+}
+
+.search-container {
+  display: flex;
+  align-items: center;
+  width: 100%; /* Breite der Suchleiste auf 100% setzen */
+}
+
+.search-input {
+  flex: 1;
+  padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 5px 0 0 5px;
+  margin: 0;
+  height: 38px; /* Höhe explizit festlegen */
+}
+
+.search-button {
+  background-color: #87c1c1;
+  border: none;
+  border-radius: 0 5px 5px 0;
+  padding: 10px;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 38px; /* Höhe explizit festlegen */
+}
+
+.search-icon {
+  width: 16px;
+  height: 16px;
+}
+
+#weather {
+  margin-top: 20px;
+  text-align: center;
+}
+
+#weather .weather-box {
+  padding: 20px;
+  background-color: white;
+  border-radius: 10px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  width: 150px;
+  margin: 0 auto;
+}
+
+#weather h2 {
+  margin: 10px 0;
+  color: #333;
+  font-size: 18px;
+}
+
+#weather p {
+  margin: 5px 0;
+  color: #666;
+  font-size: 14px;
+}
+
+#weather .temperature {
+  font-size: 24px;
+  margin: 10px 0;
+}
+
+#weather .weather-icon img {
+  width: 48px;
+  height: 48px;
+  margin: 10px 0;
 }
