--- a/src/app/courses/courses.component.css
+++ b/src/app/courses/courses.component.css
@@ -27,10 +27,26 @@
   overflow-y: auto;
 }
 
-.course-card {
+.mat-mdc-card {
   width: 100%;
-  height: 150px; /* Quadrat-Layout */
+  height: 200px;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  transition: transform 0.3s ease-in-out;
+}
+
+.mat-mdc-card:hover {
+  transform: scale(1.05);
+}
+
+.mat-mdc-card-header .mat-mdc-card-subtitle,
+.mat-mdc-card-actions {
+  visibility: hidden;
+  transition: visibility 0.3s ease-in-out;
+}
+
+.mat-mdc-card:hover .mat-mdc-card-header .mat-mdc-card-subtitle,
+.mat-mdc-card:hover .mat-mdc-card-actions {
+  visibility: visible;
 }
