--- a/src/app/courses/courses.component.html
+++ b/src/app/courses/courses.component.html
@@ -8,6 +8,13 @@
     <mat-card *ngFor="let course of courses" class="course-card">
       <mat-card-header>
         <mat-card-title>{{ course.name }}</mat-card-title>
+        <mat-card-subtitle>Semester: {{ course.semester }}</mat-card-subtitle>
+        <br>
+        <mat-card-subtitle>Prüfung: {{ course.exam }}</mat-card-subtitle>
+        <br>
+        <mat-card-subtitle>Prüfungsdatum: {{ course.examDate | date:'dd.MM.yyyy' }}</mat-card-subtitle>
+        <br>
+        <mat-card-subtitle>Note: {{ course.grade }}</mat-card-subtitle>
       </mat-card-header>
       <mat-card-actions>
         <button mat-icon-button (click)="editCourse(course)">
