--- a/src/app/tasks/tasks.component.html
+++ b/src/app/tasks/tasks.component.html
@@ -3,6 +3,9 @@
     <button mat-icon-button (click)="openDialog()">
       <mat-icon>add</mat-icon>
     </button>
+    <button mat-icon-button (click)="openCompletedToDosDialog()">
+      <mat-icon>history</mat-icon>
+    </button>
   </h2>
   <mat-accordion>
     <mat-expansion-panel *ngFor="let todo of toDos">
@@ -35,37 +38,5 @@
         </div>
       </div>
     </mat-expansion-panel>
-
-    <button mat-button (click)="toggleCompleted()">
-      {{ showCompleted ? 'Erledigte Aufgaben ausblenden' : 'Erledigte Aufgaben anzeigen' }}
-    </button>
-    <div class="trenner" *ngIf="showCompleted"></div>
-
-    <ng-container *ngIf="showCompleted">
-      <mat-expansion-panel *ngFor="let todo of completedToDos" class="completed-task">
-        <mat-expansion-panel-header>
-          <mat-panel-title>
-            {{ todo.description }}
-          </mat-panel-title>
-          <mat-panel-description>
-            Enddatum: {{ todo.deadLine | date:'dd.MM.yyyy' }}
-          </mat-panel-description>
-        </mat-expansion-panel-header>
-        <div>
-          <app-subtask *ngFor="let subtask of subtasks.get(todo.id)" [subtask]="subtask"></app-subtask>
-          <mat-label>Priorität</mat-label>
-          <br>
-          <strong>{{ todo.priority }}</strong>
-          <div class="task-actions">
-            <button mat-icon-button (click)="markAsUncompleted(todo)">
-              <mat-icon>undo</mat-icon>
-            </button>
-            <button mat-icon-button (click)="confirmDeleteTask(todo.id)">
-              <mat-icon>delete</mat-icon>
-            </button>
-          </div>
-        </div>
-      </mat-expansion-panel>
-    </ng-container>
   </mat-accordion>
 </div>
