--- a/src/app/course-dialog/course-dialog.component.html
+++ b/src/app/course-dialog/course-dialog.component.html
@@ -17,7 +17,7 @@
     <mat-form-field appearance="fill">
       <mat-label>Prüfungstyp</mat-label>
       <input matInput formControlName="exam">
-      <mat-error *ngIf="courseForm.get('exam')?.hasError('required')">Prüfung ist erforderlich.</mat-error>
+      <mat-error *ngIf="courseForm.get('exam')?.hasError('required')">Prüfungstyp ist erforderlich.</mat-error>
       <mat-error *ngIf="courseForm.get('exam')?.hasError('maxlength')">Prüfungstyp ist zu lang.</mat-error>
     </mat-form-field>
 
