Hinzufügen der Farbverbindung an Kurse, sowie des Felds: Kurs im ToDo.

--- a/src/app/course-dialog/course-dialog.component.html
+++ b/src/app/course-dialog/course-dialog.component.html
@@ -33,6 +33,11 @@
       <mat-label>Note</mat-label>
       <input matInput formControlName="grade">
     </mat-form-field>
+
+    <mat-form-field appearance="fill">
+      <mat-label>Farbe</mat-label>
+      <input matInput type="color" formControlName="color">
+    </mat-form-field>
   </form>
 </mat-dialog-content>
 <mat-dialog-actions align="end">
