--- a/src/app/course/course.component.css
+++ b/src/app/course/course.component.css
@@ -50,3 +50,17 @@
 .mat-mdc-card:hover .mat-mdc-card-actions {
   visibility: visible;
 }
+
+.todo-count-bubble {
+  position: absolute;
+  top: 0;
+  right: 0;
+  min-width: 20px;
+  height: 20px;
+  border-radius: 50%;
+  background-color: #ff0000;
+  color: #ffffff;
+  text-align: center;
+  line-height: 20px;
+  font-size: 12px;
+}
