--- a/src/app/course/course.component.html
+++ b/src/app/course/course.component.html
@@ -9,6 +9,7 @@
   </h2>
   <div class="course-list">
     <mat-card *ngFor="let course of courses" class="course-card" [style.background-color]="course.color">
+      <div class="todo-count-bubble">{{ courseToDosCount.get(course.id) }}</div>
       <mat-card-header>
         <mat-card-title>{{ course.name }}</mat-card-title>
         <mat-card-subtitle>Semester: {{ course.semester }}</mat-card-subtitle>
