weather & calendar widget added (wip)

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -14,15 +14,7 @@
   </div>
 
   <div class="dashboard-rightarea">
-    <div class="weather">
-      <div class="search-container">
-        <input type="text" [(ngModel)]="location" placeholder="Ort eingeben" class="search-input" />
-        <button (click)="updateWeatherWidget()" class="search-button">
-          <img src="/assets/search%20icon.png" alt="Suchen" class="search-icon" />
-        </button>
-      </div>
-      <div id="weather"></div>
-    </div>
+    <app-calendar-widget></app-calendar-widget>
+    <app-weather-widget></app-weather-widget>
   </div>
 </div>
-
