--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -14,6 +14,7 @@
   </div>
 
   <div class="dashboard-rightarea">
+    <app-grade-average></app-grade-average>
     <div class="weather">
       <div class="search-container">
         <input type="text" [(ngModel)]="location" placeholder="Ort eingeben" class="search-input" />
