Styling der Durchschnittsnote + Verbot der Komma-Nutzung (. erforderlich)

--- a/src/app/course-dialog/course-dialog.component.html
+++ b/src/app/course-dialog/course-dialog.component.html
@@ -10,7 +10,9 @@
 
     <mat-form-field appearance="fill">
       <mat-label>Semester</mat-label>
-      <input matInput formControlName="semester">
+      <mat-select formControlName="semester">
+        <mat-option *ngFor="let i of semesters" [value]="i">{{i}}</mat-option>
+      </mat-select>
       <mat-error *ngIf="courseForm.get('semester')?.hasError('required')">Semester ist erforderlich.</mat-error>
     </mat-form-field>
 
