--- a/src/app/grade-average/grade-average.component.html
+++ b/src/app/grade-average/grade-average.component.html
@@ -1,8 +1,7 @@
 <mat-card class="grade-average">
-  <mat-card-header>
-    <mat-card-title>Durchschnittsnote: {{ averageGrade }}</mat-card-title>
-  </mat-card-header>
-  <mat-card-content>
-    <p>{{ message }}</p>
+  <mat-card-content class="grade-content">
+    <div class="average-grade">{{ averageGrade }}</div>
+    <div class="grade-label">Durchschnittsnote</div>
+    <p class="message">{{ message }}</p>
   </mat-card-content>
 </mat-card>
