--- a/src/app/todo/todo.component.html
+++ b/src/app/todo/todo.component.html
@@ -6,6 +6,14 @@
     <button mat-icon-button (click)="openCompletedToDosDialog()">
       <mat-icon>history</mat-icon>
     </button>
+    <button mat-icon-button [matMenuTriggerFor]="sortMenu">
+      <mat-icon>sort</mat-icon>
+    </button>
+    <mat-menu #sortMenu="matMenu">
+      <button mat-menu-item (click)="sortToDos('priority')">Priorität</button>
+      <button mat-menu-item (click)="sortToDos('deadline')">Deadline</button>
+      <button mat-menu-item (click)="sortToDos('course')">Kurs</button>
+    </mat-menu>
   </h2>
   <mat-accordion>
     <mat-expansion-panel *ngFor="let todo of toDos" [ngStyle]="{'background-color': courseColors.get(todo.id)}">
