changed font & fixed layout positioning

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -2,11 +2,12 @@
   <div class="dashboard-header-container">
     <div class="dashboard-header" [ngStyle]="{'background-image': 'url(' + headerImage + ')'}">
       <div class="button-group">
-        <button class="button" (click)="triggerFileInput()">Hochladen</button>
+        <button mat-raised-button class="button" (click)="triggerFileInput()">Hochladen</button>
         <input type="file" id="fileInput" (change)="onImageSelected($event)" class="image-input">
-        <button *ngIf="headerImage" class="button" (click)="openImageSelectionModal()">Standard Bild ändern</button>
-        <button *ngIf="headerImage" class="button" (click)="removeImage()">Zurücksetzen</button>
+        <button mat-raised-button *ngIf="headerImage" class="button" (click)="openImageSelectionModal()">Standard Bild ändern</button>
+        <button mat-raised-button *ngIf="headerImage" class="button" (click)="removeImage()">Zurücksetzen</button>
       </div>
+      <button mat-raised-button class="logout-button" (click)="logout()">Ausloggen</button>
     </div>
 
   </div>
@@ -26,5 +27,3 @@
     <app-weather-widget></app-weather-widget>
   </div>
 </div>
-
-<button mat-raised-button color="primary" class="logout-button" (click)="logout()">Ausloggen</button>
