--- a/src/app/dashboard/dashboard.component.css
+++ b/src/app/dashboard/dashboard.component.css
@@ -1,10 +1,9 @@
 body {
-  font-family: Arial, sans-serif;
   background-color: #f0f0f0;
   margin: 0;
   padding: 0;
-  position: relative;
   min-height: 100vh;
+  overflow: auto;
 }
 
 .dashboard {
@@ -14,6 +13,7 @@ body {
   gap: 20px;
   padding: 20px;
   height: calc(100vh - 40px);
+  position: relative;
 }
 
 .dashboard-header-container {
@@ -25,7 +25,7 @@ body {
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
-  height: 200px;
+  height: 150px;
   position: relative;
 }
 
@@ -54,14 +54,16 @@ body {
 }
 
 .button-group .button {
-  padding: 5px 10px;
+  padding: 3px 8px;
   border: 1px solid #cccccc;
   background-color: white;
   color: black;
   cursor: pointer;
   border-radius: 3px;
-  font-size: 0.9em;
+  font-family: 'Poppins', sans-serif;
+  font-size: 0.8em;
 }
+
 
 .button-group .button:hover {
   background-color: #f0f0f0;
@@ -71,6 +73,7 @@ body {
   display: grid;
   grid-template-columns: 1fr 1fr;
   gap: 20px;
+  position: relative;
 }
 
 .dashboard-courses {
@@ -80,14 +83,25 @@ body {
 .dashboard-rightarea {
   grid-column: 2 / 3;
   display: grid;
-  grid-template-rows: auto auto;
+  grid-template-rows: auto auto auto;
   gap: 20px;
+  position: absolute;
+  top: 200px;
+  right: 0;
+  padding-bottom: 30px;
 }
 
 .logout-button {
   position: absolute;
   bottom: 20px;
   right: 20px;
-  padding: 10px 20px;
-  font-size: 14px;
+  padding: 5px 10px;
+  border: 1px solid #cccccc;
+  background-color: white;
+  color: black;
+  cursor: pointer;
+  border-radius: 3px;
+  font-family: 'Poppins', sans-serif;
+  font-size: 0.8em;
 }
+
