--- a/src/custom-theme.scss
+++ b/src/custom-theme.scss
@@ -18,20 +18,24 @@ $StudyDashAngular-accent: mat.define-palette(mat.$pink-palette, A200, A100, A400
 // The warn palette is optional (defaults to red).
 $StudyDashAngular-warn: mat.define-palette(mat.$red-palette);
 
-// Create the theme object. A theme consists of configurations for individual
-// theming systems such as "color" or "typography".
+// Define your custom typography config
+$custom-typography: mat.define-typography-config(
+  $font-family: 'Poppins, sans-serif',
+  $headline-1: mat.define-typography-level(32px, 48px, 700),
+  $body-1: mat.define-typography-level(16px, 24px, 500)
+);
+
+// Create the theme object with your custom typography config
 $StudyDashAngular-theme: mat.define-light-theme((
   color: (
     primary: $StudyDashAngular-primary,
     accent: $StudyDashAngular-accent,
     warn: $StudyDashAngular-warn,
   ),
-  typography: mat.define-typography-config(),
+  typography: $custom-typography,
   density: 0
 ));
 
-// Include theme styles for core and each component used in your app.
-// Alternatively, you can import and @include the theme mixins for each component
-// that you are using.
+// Include theme styles for core and each component used in your app
 @include mat.all-component-themes($StudyDashAngular-theme);
 
