--- a/src/custom-theme.scss
+++ b/src/custom-theme.scss
@@ -1,4 +1,3 @@
-
 // Custom Theming for Angular Material
 // For more information: https://material.angular.io/guide/theming
 @use '@angular/material' as mat;
@@ -12,21 +11,21 @@
 // Define the palettes for your theme using the Material Design palettes available in palette.scss
 // (imported above). For each palette, you can optionally specify a default, lighter, and darker
 // hue. Available color palettes: https://material.io/design/color/
-$StudyDashAngular-primary: mat.define-palette(mat.$indigo-palette);
-$StudyDashAngular-accent: mat.define-palette(mat.$pink-palette, A200, A100, A400);
+$StudyDashAngular-primary: mat.m2-define-palette(mat.$m2-indigo-palette, 500, 50, 700);
+$StudyDashAngular-accent: mat.m2-define-palette(mat.$m2-pink-palette, A200, A100, A400);
 
 // The warn palette is optional (defaults to red).
-$StudyDashAngular-warn: mat.define-palette(mat.$red-palette);
+$StudyDashAngular-warn: mat.m2-define-palette(mat.$m2-red-palette);
 
 // Define your custom typography config
-$custom-typography: mat.define-typography-config(
+$custom-typography: mat.m2-define-typography-config(
   $font-family: 'Poppins, sans-serif',
-  $headline-1: mat.define-typography-level(32px, 48px, 700),
-  $body-1: mat.define-typography-level(16px, 24px, 500)
+  $headline-1: mat.m2-define-typography-level(32px, 48px, 700),
+  $body-1: mat.m2-define-typography-level(16px, 24px, 500)
 );
 
 // Create the theme object with your custom typography config
-$StudyDashAngular-theme: mat.define-light-theme((
+$StudyDashAngular-theme: mat.m2-define-light-theme((
   color: (
     primary: $StudyDashAngular-primary,
     accent: $StudyDashAngular-accent,
